--- a/app/src/main/res/layout/activity_draw.xml
+++ b/app/src/main/res/layout/activity_draw.xml
@@ -6,138 +6,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ru.hatchup.animotio.DrawWindow
-        android:id="@+id/dWindow"
-        android:layout_width="wrap_content"
-        android:layout_height="400dp"
-        android:alpha="0"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="invisible" />
-
     <Button
         android:id="@+id/button2"
+        style="@style/Widget.MaterialComponents.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="SaveDraw"
-        android:text="НАЗАД"
+        android:layout_marginStart="32dp"
+        android:layout_marginBottom="32dp"
+        android:background="@android:color/black"
+        android:onClick="SwitchColor"
+        android:text="Цвет"
+        android:textAllCaps="true"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dWindow" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/dWindow"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/imageButton"
+        app:layout_constraintStart_toEndOf="@+id/imageButton3"
         app:layout_constraintTop_toTopOf="parent"
-        app:tabMode="auto">
-
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="1" />
-
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/tabItem10"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tab12" />
-
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/tabItem"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tab3" />
-
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/tabItem13"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tab15" />
-
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/tabItem14"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tab16" />
-
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/tabItem2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tab4" />
-
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/tabItem9"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tab11" />
-
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/tabItem12"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tab14" />
-
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/tabItem3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tab5" />
-
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/tabItem11"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tab13" />
-
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/tabItem8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tab10" />
-
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/tabItem4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tab6" />
-
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/tabItem5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tab7" />
-
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/tabItem7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tab9" />
-
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/tabItem6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tab8" />
-
-    </com.google.android.material.tabs.TabLayout>
+        app:tabMode="auto" />
 
     <View
         android:id="@+id/divider2"
         android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:layout_marginBottom="400dp"
-        android:background="?android:attr/listDivider"
+        android:layout_height="10dp"
+        android:layout_marginBottom="450dp"
+        android:background="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -147,11 +46,85 @@
         android:id="@+id/divider3"
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_marginTop="400dp"
+        android:layout_marginTop="350dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintBottom_toBottomOf="@+id/button2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tabLayout" />
+
+    <view
+        android:id="@+id/dView"
+        class="ru.hatchup.animotio.DrawingView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/divider3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/divider2" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"
+        android:backgroundTint="@color/colorPrimary"
+        android:backgroundTintMode="add"
+        android:clickable="true"
+        android:onClick="viewDialog"
+        app:backgroundTint="@color/colorPrimaryDark"
+        app:backgroundTintMode="src_over"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_save" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        style="@android:style/Widget.Material.ImageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:backgroundTint="@color/colorBackground"
+        android:onClick="addPage"
+        android:tint="@color/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="@+id/tabLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_add" />
+
+    <SeekBar
+        android:id="@+id/seekBar3"
+        style="@style/Widget.AppCompat.SeekBar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:max="50"
+        android:min="1"
+        android:progress="10"
+        android:progressTint="@color/colorPrimary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dView" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="@+id/divider3"
+        app:layout_constraintHorizontal_bias="0.473"
+        app:layout_constraintStart_toStartOf="@+id/divider3"
+        app:layout_constraintTop_toBottomOf="@+id/seekBar3" />
+
+    <ImageButton
+        android:id="@+id/imageButton3"
+        style="@android:style/Widget.Material.ImageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:backgroundTint="@color/colorBackground"
+        android:onClick="delPage"
+        android:tint="@color/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="@+id/tabLayout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_delete" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
