--- a/app/src/main/res/layout/dialogfragment.xml
+++ b/app/src/main/res/layout/dialogfragment.xml
@@ -53,9 +53,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:foregroundTint="@color/colorPrimary"
-        android:max="10"
-        android:min="0"
-        android:progress="0"
+        android:max="30"
+        android:min="1"
+        android:progress="10"
         android:progressBackgroundTint="@color/colorPrimary"
         android:progressTint="@color/colorPrimary"
         android:thumbTint="@color/colorPrimary"
@@ -69,7 +69,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Задержка между кадрами:"
+        android:text="Частота кадров:"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
