--- a/app/src/main/res/layout/dialogfragment.xml
+++ b/app/src/main/res/layout/dialogfragment.xml
@@ -59,7 +59,7 @@
         android:progressBackgroundTint="@color/colorPrimary"
         android:progressTint="@color/colorPrimary"
         android:thumbTint="@color/colorPrimary"
-        app:layout_constraintEnd_toEndOf="@+id/textView2"
+        app:layout_constraintEnd_toEndOf="@+id/textView4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         app:tickMarkTint="@color/colorPrimary" />
@@ -119,5 +119,18 @@
         app:layout_constraintEnd_toEndOf="@+id/seekBar2"
         app:layout_constraintStart_toStartOf="@+id/seekBar2"
         app:layout_constraintTop_toBottomOf="@+id/seekBar2" />
+
+    <Switch
+        android:id="@+id/switch1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:switchTextAppearance="@style/TextAppearance.AppCompat.Body2"
+        android:text="Использовать реверс"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textOff="Нет"
+        android:textOn="Да"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
