--- a/app/src/main/res/layout/activity_draw.xml
+++ b/app/src/main/res/layout/activity_draw.xml
@@ -85,7 +85,7 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:backgroundTint="@color/colorBackground"
-        android:onClick="addPage"
+        android:longClickable="true"
         android:tint="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="@+id/tabLayout"
         app:layout_constraintEnd_toEndOf="parent"
